# typenx-addon-anilist

./: Cargo.toml  README.md  package-lock.json  package.json
src/: anilist.ts  api.rs  index.ts  main.rs  mapping.rs  recommendations.rs  server.rs  types.rs
